src/editor/ReactiveGrammerParser.js
// Generated from ReactiveGrammer.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "ReactiveGrammer.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'{'", "'}'", "'('", "')'", "':'", "','", "'^'", 
                     "'*'", "'/'", "'+'", "'-'", "'#'", "'['", "']'", "'->'", 
                     "'.'", "'namespace'", "'enum'", "'attribute'", "'struct'", 
                     "'readonly'", "'default'", "'var'", "'which is'", "'and'", 
                     "'or'", "'not'", "'>='", "'>'", "'<='", "'<'", "'=='", 
                     "'!='", "'is'", "'base'", "'of'", "'for'", "'name'", 
                     "'if'", "'elseif'", "'else'", "'foreach'", "'in'", 
                     "'injector'", "'injected'", "'arguments'", null, null, 
                     null, null, null, null, null, null, null, null, "'\n'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, "NAMESPACE", 
                      "ENUM", "ATTRIBUTE", "STRUCT", "READONLY", "DEFAULT", 
                      "VAR", "WHICH_IS", "AND", "OR", "NOT", "GTE", "GT", 
                      "LTE", "LT", "EQ", "NEQ", "IS", "BASE", "OF", "FOR", 
                      "NAME", "IF", "ELSEIF", "ELSE", "FOREACH", "IN", "INJECTOR", 
                      "INJECTED", "ARGUMENTS", "StringLiteral", "BooleanLiteral", 
                      "NumberLiteral", "DecimalLiteral", "ATTRIBUTE_USAGE_NAME", 
                      "ID_START", "IDENTIFIER", "LABEL_NAME", "WS", "COMMENT", 
                      "NL" ];

var ruleNames =  [ "sourceFile", "block", "defenition", "namespaceDefinition", 
                   "enumDefinition", "enumCase", "structDefinition", "structWhichIsDefinition", 
                   "structBlockItem", "label", "labelableIdentifier", "labelableRefrenceName", 
                   "parameterBody", "parameters", "argumentBody", "arguments", 
                   "attributeUsage", "propertyDefinition", "propertyOptions", 
                   "propertyDefaultOption", "propertyInjectedOption", "propertyInjectorOption", 
                   "propertyArgumentsOption", "propertyReadonlyOption", 
                   "typeRefrence", "refrenceName", "genericTypeRefrence", 
                   "expression", "atom", "newStructExpression", "arrayExpression", 
                   "arrayMember", "namedCollectionExpression", "namedCollectionMember", 
                   "arrayForeachMember", "conditionalValueExpression", "conditionalValueExpressionTrueBranch", 
                   "conditionalValueExpressionElseBranch", "conditionalValueExpressionElseIfBranch", 
                   "primitiveExpression", "refrenceExpression", "labelRefrenceMemberAccessExpressionWithParameters", 
                   "labelRefrenceMemberAccessExpression", "typeStaticMemberAccessExpression", 
                   "nameDefinition", "nameOptions" ];

function ReactiveGrammerParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ReactiveGrammerParser.prototype = Object.create(antlr4.Parser.prototype);
ReactiveGrammerParser.prototype.constructor = ReactiveGrammerParser;

Object.defineProperty(ReactiveGrammerParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ReactiveGrammerParser.EOF = antlr4.Token.EOF;
ReactiveGrammerParser.T__0 = 1;
ReactiveGrammerParser.T__1 = 2;
ReactiveGrammerParser.T__2 = 3;
ReactiveGrammerParser.T__3 = 4;
ReactiveGrammerParser.T__4 = 5;
ReactiveGrammerParser.T__5 = 6;
ReactiveGrammerParser.T__6 = 7;
ReactiveGrammerParser.T__7 = 8;
ReactiveGrammerParser.T__8 = 9;
ReactiveGrammerParser.T__9 = 10;
ReactiveGrammerParser.T__10 = 11;
ReactiveGrammerParser.T__11 = 12;
ReactiveGrammerParser.T__12 = 13;
ReactiveGrammerParser.T__13 = 14;
ReactiveGrammerParser.T__14 = 15;
ReactiveGrammerParser.T__15 = 16;
ReactiveGrammerParser.NAMESPACE = 17;
ReactiveGrammerParser.ENUM = 18;
ReactiveGrammerParser.ATTRIBUTE = 19;
ReactiveGrammerParser.STRUCT = 20;
ReactiveGrammerParser.READONLY = 21;
ReactiveGrammerParser.DEFAULT = 22;
ReactiveGrammerParser.VAR = 23;
ReactiveGrammerParser.WHICH_IS = 24;
ReactiveGrammerParser.AND = 25;
ReactiveGrammerParser.OR = 26;
ReactiveGrammerParser.NOT = 27;
ReactiveGrammerParser.GTE = 28;
ReactiveGrammerParser.GT = 29;
ReactiveGrammerParser.LTE = 30;
ReactiveGrammerParser.LT = 31;
ReactiveGrammerParser.EQ = 32;
ReactiveGrammerParser.NEQ = 33;
ReactiveGrammerParser.IS = 34;
ReactiveGrammerParser.BASE = 35;
ReactiveGrammerParser.OF = 36;
ReactiveGrammerParser.FOR = 37;
ReactiveGrammerParser.NAME = 38;
ReactiveGrammerParser.IF = 39;
ReactiveGrammerParser.ELSEIF = 40;
ReactiveGrammerParser.ELSE = 41;
ReactiveGrammerParser.FOREACH = 42;
ReactiveGrammerParser.IN = 43;
ReactiveGrammerParser.INJECTOR = 44;
ReactiveGrammerParser.INJECTED = 45;
ReactiveGrammerParser.ARGUMENTS = 46;
ReactiveGrammerParser.StringLiteral = 47;
ReactiveGrammerParser.BooleanLiteral = 48;
ReactiveGrammerParser.NumberLiteral = 49;
ReactiveGrammerParser.DecimalLiteral = 50;
ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME = 51;
ReactiveGrammerParser.ID_START = 52;
ReactiveGrammerParser.IDENTIFIER = 53;
ReactiveGrammerParser.LABEL_NAME = 54;
ReactiveGrammerParser.WS = 55;
ReactiveGrammerParser.COMMENT = 56;
ReactiveGrammerParser.NL = 57;

ReactiveGrammerParser.RULE_sourceFile = 0;
ReactiveGrammerParser.RULE_block = 1;
ReactiveGrammerParser.RULE_defenition = 2;
ReactiveGrammerParser.RULE_namespaceDefinition = 3;
ReactiveGrammerParser.RULE_enumDefinition = 4;
ReactiveGrammerParser.RULE_enumCase = 5;
ReactiveGrammerParser.RULE_structDefinition = 6;
ReactiveGrammerParser.RULE_structWhichIsDefinition = 7;
ReactiveGrammerParser.RULE_structBlockItem = 8;
ReactiveGrammerParser.RULE_label = 9;
ReactiveGrammerParser.RULE_labelableIdentifier = 10;
ReactiveGrammerParser.RULE_labelableRefrenceName = 11;
ReactiveGrammerParser.RULE_parameterBody = 12;
ReactiveGrammerParser.RULE_parameters = 13;
ReactiveGrammerParser.RULE_argumentBody = 14;
ReactiveGrammerParser.RULE_arguments = 15;
ReactiveGrammerParser.RULE_attributeUsage = 16;
ReactiveGrammerParser.RULE_propertyDefinition = 17;
ReactiveGrammerParser.RULE_propertyOptions = 18;
ReactiveGrammerParser.RULE_propertyDefaultOption = 19;
ReactiveGrammerParser.RULE_propertyInjectedOption = 20;
ReactiveGrammerParser.RULE_propertyInjectorOption = 21;
ReactiveGrammerParser.RULE_propertyArgumentsOption = 22;
ReactiveGrammerParser.RULE_propertyReadonlyOption = 23;
ReactiveGrammerParser.RULE_typeRefrence = 24;
ReactiveGrammerParser.RULE_refrenceName = 25;
ReactiveGrammerParser.RULE_genericTypeRefrence = 26;
ReactiveGrammerParser.RULE_expression = 27;
ReactiveGrammerParser.RULE_atom = 28;
ReactiveGrammerParser.RULE_newStructExpression = 29;
ReactiveGrammerParser.RULE_arrayExpression = 30;
ReactiveGrammerParser.RULE_arrayMember = 31;
ReactiveGrammerParser.RULE_namedCollectionExpression = 32;
ReactiveGrammerParser.RULE_namedCollectionMember = 33;
ReactiveGrammerParser.RULE_arrayForeachMember = 34;
ReactiveGrammerParser.RULE_conditionalValueExpression = 35;
ReactiveGrammerParser.RULE_conditionalValueExpressionTrueBranch = 36;
ReactiveGrammerParser.RULE_conditionalValueExpressionElseBranch = 37;
ReactiveGrammerParser.RULE_conditionalValueExpressionElseIfBranch = 38;
ReactiveGrammerParser.RULE_primitiveExpression = 39;
ReactiveGrammerParser.RULE_refrenceExpression = 40;
ReactiveGrammerParser.RULE_labelRefrenceMemberAccessExpressionWithParameters = 41;
ReactiveGrammerParser.RULE_labelRefrenceMemberAccessExpression = 42;
ReactiveGrammerParser.RULE_typeStaticMemberAccessExpression = 43;
ReactiveGrammerParser.RULE_nameDefinition = 44;
ReactiveGrammerParser.RULE_nameOptions = 45;

function SourceFileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_sourceFile;
    return this;
}

SourceFileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceFileContext.prototype.constructor = SourceFileContext;

SourceFileContext.prototype.EOF = function() {
    return this.getToken(ReactiveGrammerParser.EOF, 0);
};

SourceFileContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

SourceFileContext.prototype.COMMENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ReactiveGrammerParser.COMMENT);
    } else {
        return this.getToken(ReactiveGrammerParser.COMMENT, i);
    }
};





ReactiveGrammerParser.SourceFileContext = SourceFileContext;

ReactiveGrammerParser.prototype.sourceFile = function() {

    var localctx = new SourceFileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ReactiveGrammerParser.RULE_sourceFile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ReactiveGrammerParser.NAMESPACE) | (1 << ReactiveGrammerParser.ENUM) | (1 << ReactiveGrammerParser.STRUCT))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (ReactiveGrammerParser.BASE - 35)) | (1 << (ReactiveGrammerParser.NAME - 35)) | (1 << (ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME - 35)) | (1 << (ReactiveGrammerParser.COMMENT - 35)) | (1 << (ReactiveGrammerParser.NL - 35)))) !== 0)) {
            this.state = 94;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case ReactiveGrammerParser.NAMESPACE:
            case ReactiveGrammerParser.ENUM:
            case ReactiveGrammerParser.STRUCT:
            case ReactiveGrammerParser.BASE:
            case ReactiveGrammerParser.NAME:
            case ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME:
            case ReactiveGrammerParser.NL:
                this.state = 92;
                this.block();
                break;
            case ReactiveGrammerParser.COMMENT:
                this.state = 93;
                this.match(ReactiveGrammerParser.COMMENT);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 98;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 99;
        this.match(ReactiveGrammerParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.defenition = function() {
    return this.getTypedRuleContext(DefenitionContext,0);
};

BlockContext.prototype.NL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ReactiveGrammerParser.NL);
    } else {
        return this.getToken(ReactiveGrammerParser.NL, i);
    }
};





ReactiveGrammerParser.BlockContext = BlockContext;

ReactiveGrammerParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ReactiveGrammerParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ReactiveGrammerParser.NL) {
            this.state = 101;
            this.match(ReactiveGrammerParser.NL);
        }

        this.state = 104;
        this.defenition();
        this.state = 106;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        if(la_===1) {
            this.state = 105;
            this.match(ReactiveGrammerParser.NL);

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DefenitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_defenition;
    return this;
}

DefenitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefenitionContext.prototype.constructor = DefenitionContext;

DefenitionContext.prototype.namespaceDefinition = function() {
    return this.getTypedRuleContext(NamespaceDefinitionContext,0);
};

DefenitionContext.prototype.enumDefinition = function() {
    return this.getTypedRuleContext(EnumDefinitionContext,0);
};

DefenitionContext.prototype.structDefinition = function() {
    return this.getTypedRuleContext(StructDefinitionContext,0);
};

DefenitionContext.prototype.nameDefinition = function() {
    return this.getTypedRuleContext(NameDefinitionContext,0);
};




ReactiveGrammerParser.DefenitionContext = DefenitionContext;

ReactiveGrammerParser.prototype.defenition = function() {

    var localctx = new DefenitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ReactiveGrammerParser.RULE_defenition);
    try {
        this.state = 112;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ReactiveGrammerParser.NAMESPACE:
            this.enterOuterAlt(localctx, 1);
            this.state = 108;
            this.namespaceDefinition();
            break;
        case ReactiveGrammerParser.ENUM:
            this.enterOuterAlt(localctx, 2);
            this.state = 109;
            this.enumDefinition();
            break;
        case ReactiveGrammerParser.STRUCT:
        case ReactiveGrammerParser.BASE:
        case ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME:
            this.enterOuterAlt(localctx, 3);
            this.state = 110;
            this.structDefinition();
            break;
        case ReactiveGrammerParser.NAME:
            this.enterOuterAlt(localctx, 4);
            this.state = 111;
            this.nameDefinition();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NamespaceDefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_namespaceDefinition;
    return this;
}

NamespaceDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NamespaceDefinitionContext.prototype.constructor = NamespaceDefinitionContext;

NamespaceDefinitionContext.prototype.NAMESPACE = function() {
    return this.getToken(ReactiveGrammerParser.NAMESPACE, 0);
};

NamespaceDefinitionContext.prototype.IDENTIFIER = function() {
    return this.getToken(ReactiveGrammerParser.IDENTIFIER, 0);
};

NamespaceDefinitionContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};




ReactiveGrammerParser.NamespaceDefinitionContext = NamespaceDefinitionContext;

ReactiveGrammerParser.prototype.namespaceDefinition = function() {

    var localctx = new NamespaceDefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ReactiveGrammerParser.RULE_namespaceDefinition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this.match(ReactiveGrammerParser.NAMESPACE);
        this.state = 115;
        this.match(ReactiveGrammerParser.IDENTIFIER);
        this.state = 116;
        this.match(ReactiveGrammerParser.T__0);
        this.state = 120;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ReactiveGrammerParser.NAMESPACE) | (1 << ReactiveGrammerParser.ENUM) | (1 << ReactiveGrammerParser.STRUCT))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (ReactiveGrammerParser.BASE - 35)) | (1 << (ReactiveGrammerParser.NAME - 35)) | (1 << (ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME - 35)) | (1 << (ReactiveGrammerParser.NL - 35)))) !== 0)) {
            this.state = 117;
            this.block();
            this.state = 122;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 123;
        this.match(ReactiveGrammerParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EnumDefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_enumDefinition;
    return this;
}

EnumDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EnumDefinitionContext.prototype.constructor = EnumDefinitionContext;

EnumDefinitionContext.prototype.ENUM = function() {
    return this.getToken(ReactiveGrammerParser.ENUM, 0);
};

EnumDefinitionContext.prototype.IDENTIFIER = function() {
    return this.getToken(ReactiveGrammerParser.IDENTIFIER, 0);
};

EnumDefinitionContext.prototype.enumCase = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EnumCaseContext);
    } else {
        return this.getTypedRuleContext(EnumCaseContext,i);
    }
};




ReactiveGrammerParser.EnumDefinitionContext = EnumDefinitionContext;

ReactiveGrammerParser.prototype.enumDefinition = function() {

    var localctx = new EnumDefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ReactiveGrammerParser.RULE_enumDefinition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.match(ReactiveGrammerParser.ENUM);
        this.state = 126;
        this.match(ReactiveGrammerParser.IDENTIFIER);
        this.state = 127;
        this.match(ReactiveGrammerParser.T__0);
        this.state = 129; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 128;
            this.enumCase();
            this.state = 131; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ReactiveGrammerParser.IDENTIFIER);
        this.state = 133;
        this.match(ReactiveGrammerParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EnumCaseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_enumCase;
    return this;
}

EnumCaseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EnumCaseContext.prototype.constructor = EnumCaseContext;

EnumCaseContext.prototype.IDENTIFIER = function() {
    return this.getToken(ReactiveGrammerParser.IDENTIFIER, 0);
};




ReactiveGrammerParser.EnumCaseContext = EnumCaseContext;

ReactiveGrammerParser.prototype.enumCase = function() {

    var localctx = new EnumCaseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ReactiveGrammerParser.RULE_enumCase);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 135;
        this.match(ReactiveGrammerParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StructDefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReactiveGrammerParser.RULE_structDefinition;
    return this;
}

StructDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructDefinitionContext.prototype.constructor = StructDefinitionContext;

StructDefinitionContext.prototype.STRUCT = function() {
    return this.getToken(ReactiveGrammerParser.STRUCT, 0);
};

StructDefinitionContext.prototype.labelableIdentifier = function() {
    return this.getTypedRuleContext(LabelableIdentifierContext,0);
};

StructDefinitionContext.prototype.attributeUsage = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeUsageContext);
    } else {
        return this.getTypedRuleContext(AttributeUsageContext,i);
    }
};

StructDefinitionContext.prototype.BASE = function() {
    return this.getToken(ReactiveGrammerParser.BASE, 0);
};

StructDefinitionContext.prototype.ATTRIBUTE = function() {
    return this.getToken(ReactiveGrammerParser.ATTRIBUTE, 0);
};

StructDefinitionContext.prototype.structWhichIsDefinition = function() {
    return this.getTypedRuleContext(StructWhichIsDefinitionContext,0);
};

StructDefinitionContext.prototype.structBlockItem = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StructBlockItemContext);
    } else {
        return this.getTypedRuleContext(StructBlockItemContext,i);
    }
};




ReactiveGrammerParser.StructDefinitionContext = StructDefinitionContext;

ReactiveGrammerParser.prototype.structDefinition = function() {

    var localctx = new StructDefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ReactiveGrammerParser.RULE_structDefinition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ReactiveGrammerParser.ATTRIBUTE_USAGE_NAME) {
            this.state = 137;
            this.attributeUsage();
            this.state = 142;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 144;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ReactiveGrammerParser.BASE) {
            this.state = 143;
            this.match(ReactiveGrammerParser.BASE);
        }

        this.state = 146;
        this.match(ReactiveGrammerParser.STRUCT);
        this.state = 148;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ReactiveGrammerParser.ATTRIBUTE) {
            this.state = 147;
            this.match(ReactiveGrammerParser.ATTRIBUTE);
        }

        this.state = 150;
        this.labelableIdentifier();
        this.state = 152;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ReactiveGrammerParser.WHICH_IS) {
            this.state = 151;
            this.structWhichIsDefinition();
        }
